New property - when loading sketches with external geo, it ignores old property

--- a/src/Mod/Sketcher/App/CMakeLists.txt
+++ b/src/Mod/Sketcher/App/CMakeLists.txt
@@ -43,6 +43,8 @@ generate_from_xml(SketchPy)
 SET(Properties_SRCS
     PropertyConstraintList.cpp
     PropertyConstraintList.h
+    PropertyExternalGeometryList.cpp
+    PropertyExternalGeometryList.h
 )
 SOURCE_GROUP("Properties" FILES ${Properties_SRCS})
 
